src/tui/app/src/bottom_pane/snapshots/lha_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_then_esc_hint.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                           .----.   "
"                                                                                          ( @  @ )  "
"                                                                                          (______)  "
"                                                                                          /\/\/\/\\ "
"                                                                                            Echo    "
"› Ask LHA to do anything                                                                            "
"                                                                                                    "
"  esc esc to edit previous message                                                                  "
