src/tui/app/src/bottom_pane/snapshots/lha_tui__bottom_pane__chat_composer__tests__image_placeholder_multiple.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                           .----.   "
"                                                                                          ( @  @ )  "
"                                                                                          (______)  "
"                                                                                          /\/\/\/\\ "
"                                                                                            Echo    "
"› [Image #1][Image #2]                                                                              "
"                                                                                                    "
"  loading · 100% left                                                                               "
