src/tui/app/src/bottom_pane/snapshots/lha_tui__bottom_pane__chat_composer__tests__small.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                           .----.   "
"                                                                                          ( @  @ )  "
"                                                                                          (______)  "
"                                                                                          /\/\/\/\\ "
"                                                                                            Echo    "
"                                                                                                    "
"› short                                                                                             "
"                                                                                                    "
"  loading · 100% left                                                                               "
