src/tui/app/src/bottom_pane/snapshots/lha_tui__bottom_pane__chat_composer__tests__zellij_empty_composer.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                           .----.   "
"                                                                                          ( @  @ )  "
"                                                                                          (______)  "
"                                                                                          /\/\/\/\\ "
"                                                                                            Echo    "
"› Ask LHA to do anything                                                                            "
"                                                                                                    "
"  loading · 100% left                                                                               "
